# tpa-pytorch

./: .gitignore  README.md  pyproject.toml  tpa.py
tpa_pytorch/: tpa.py
